--- a/products.html
+++ b/products.html
@@ -228,7 +228,7 @@
         <div class="product-desc">A Music box for the fingers</div>
       </div>
       <div class="product-card">
-        <img src="Raindrum.png" alt="RainDrum" />
+        <img src="image/Raindrum.png" alt="RainDrum" />
         <div class="product-name">RainDrum</div>
         <div class="product-desc">For under the rain to make a nice sound or with a hammer!</div>
       </div>
