--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
   <title>Market Muse Contact</title>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
   <style>
-    /* Reset & Base Styles */
+    /* Existing styles (unchanged) */
     body {
       font-family: 'Baloo 2', cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -18,7 +18,6 @@
       overflow-x: hidden;
     }
 
-    /* Header */
     header {
       background: #ff7043;
       color: #fff;
@@ -29,6 +28,7 @@
       top: 0;
       z-index: 10;
     }
+
     header img {
       width: 140px;
       border-radius: 50%;
@@ -36,10 +36,12 @@
       transition: transform 0.4s ease, box-shadow 0.4s ease;
       cursor: pointer;
     }
+
     header img:hover {
       transform: rotate(10deg) scale(1.2);
       box-shadow: 0 0 40px 12px #fff176;
     }
+
     nav ul {
       list-style: none;
       padding: 0;
@@ -52,6 +54,7 @@
       font-size: 1.25rem;
       text-shadow: 1px 1px 3px #bb342f;
     }
+
     nav ul li a {
       color: #fff;
       text-decoration: none;
@@ -61,6 +64,7 @@
       transition: background-color 0.3s ease, transform 0.3s ease;
       box-shadow: 0 3px 6px rgba(255, 255, 255, 0.3);
     }
+
     nav ul li a:hover {
       background-color: #fff176;
       color: #ff7043;
@@ -68,7 +72,6 @@
       box-shadow: 0 6px 20px #fff176;
     }
 
-    /* Main */
     main {
       max-width: 900px;
       margin: 50px auto 120px;
@@ -80,6 +83,7 @@
       font-size: 1.15rem;
       color: #5d4037;
     }
+
     main h1 {
       font-family: 'Baloo 2', cursive;
       color: #ff7043;
@@ -90,7 +94,6 @@
       text-shadow: 2px 2px 8px #ffa726;
     }
 
-    /* Contact Form */
     .contact-form {
       background: #fff9e6;
       padding: 40px 50px;
@@ -98,9 +101,11 @@
       box-shadow: 0 12px 30px rgba(255, 110, 64, 0.4);
       margin-top: 30px;
     }
+
     .form-group {
       margin-bottom: 20px;
     }
+
     .form-group label {
       display: block;
       font-weight: 700;
@@ -109,6 +114,7 @@
       font-family: 'Comic Neue', cursive;
       font-size: 1.1rem;
     }
+
     .form-group input,
     .form-group textarea {
       width: 100%;
@@ -121,9 +127,19 @@
       font-family: 'Baloo 2', cursive;
       color: #5d4037;
     }
+
     .form-group textarea {
       resize: none;
     }
+
+    .form-error {
+      color: #d32f2f;
+      font-family: 'Comic Neue', cursive;
+      font-weight: bold;
+      margin-bottom: 10px;
+      display: none;
+    }
+
     button {
       background: linear-gradient(45deg, #ff7043, #ffcc80);
       color: #fff;
@@ -137,12 +153,18 @@
       box-shadow: 0 8px 20px rgba(255, 110, 64, 0.8);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    button:hover {
+
+    button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+
+    button:hover:enabled {
       transform: scale(1.1);
       box-shadow: 0 12px 35px rgba(255, 176, 64, 1);
     }
 
-    /* Footer */
     footer {
       text-align: center;
       padding: 18px 0;
@@ -153,14 +175,15 @@
       box-shadow: 0 -3px 10px rgba(255, 110, 64, 0.6);
     }
 
-    /* Responsive */
     @media (max-width: 768px) {
       main {
         padding: 30px;
       }
+
       .contact-form {
         padding: 30px;
       }
+
       nav ul {
         flex-wrap: wrap;
         gap: 14px;
@@ -184,21 +207,26 @@
 <main>
   <h1>Contact Us</h1>
   <div class="contact-form">
-    <form action="https://api.web3forms.com/submit" method="POST" novalidate>
+    <form id="contactForm" action="https://api.web3forms.com/submit" method="POST" novalidate>
       <input type="hidden" name="access_key" value="6fe19c5e-224b-40b4-a46c-16b582642d85">
+
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Your Full Name" required>
       </div>
+
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="Your Email Address" required>
       </div>
+
       <div class="form-group">
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="4" placeholder="Your Message" required></textarea>
       </div>
-      <button type="submit">Send Message</button>
+
+      <div id="errorMsg" class="form-error">Please fill out all fields before sending.</div>
+      <button type="submit" id="submitBtn" disabled>Send Message</button>
     </form>
   </div>
 </main>
@@ -206,6 +234,38 @@
 <footer>
   <p>&copy; 2025 Market Muse. All rights reserved.</p>
 </footer>
+
+<script>
+  const form = document.getElementById('contactForm');
+  const nameField = document.getElementById('name');
+  const emailField = document.getElementById('email');
+  const messageField = document.getElementById('message');
+  const submitBtn = document.getElementById('submitBtn');
+  const errorMsg = document.getElementById('errorMsg');
+
+  function checkFields() {
+    const isValid =
+      nameField.value.trim() !== '' &&
+      emailField.value.trim() !== '' &&
+      messageField.value.trim() !== '';
+
+    submitBtn.disabled = !isValid;
+    if (isValid) {
+      errorMsg.style.display = 'none';
+    }
+  }
+
+  nameField.addEventListener('input', checkFields);
+  emailField.addEventListener('input', checkFields);
+  messageField.addEventListener('input', checkFields);
+
+  form.addEventListener('submit', function(e) {
+    if (submitBtn.disabled) {
+      e.preventDefault();
+      errorMsg.style.display = 'block';
+    }
+  });
+</script>
 </body>
 </html>
 
