--- a/products.html
+++ b/products.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -245,28 +244,42 @@
     <h2>And More</h2>
     <div class="products-grid">
       <div class="product-card">
-        <img src="Hair Clips.png" alt="Hair Clips" />
+        <img src="HairClips.png" alt="Hair Clips" />
         <div class="product-name">Hair Clips</div>
         <div class="product-desc">Nice for youre hair and keeps it steady</div>
       </div>
       <div class="product-card">
-        <img src="Seal Wax.png" alt="Seal Wax" />
+        <img src="Sealwax.png" alt="Seal Wax" />
         <div class="product-name">Seal Wax</div>
         <div class="product-desc">to seal youre envelope</div>
       </div>
       <div class="product-card">
-        <img src="Phone Cases" alt="Phone Cases" />
+        <img src="Phonecases.png" alt="Phone Cases" />
         <div class="product-name">Phone Cases</div>
-        <div class="product-desc">To protect and style youre phone!</div>
+        <div class="product-desc">To protect and style youre phone! </div>
       </div>
       <div class="product-card">
-        <img src="Airpod Cases.png" alt="Airpod Cases" />
-        <div class="product-name">Airpod Cases</div>
-        <div class="product-desc">To style youre airpods</div>
+        <img src="Fans.png" alt="Fans" />
+        <div class="product-name">Fans</div>
+        <div class="product-desc">cute and cool you off</div>
       </div>
-    </div>
-  </div>
-
+      <div class="product-card">
+        <img src="airpodcases.png" alt="AirpodCases" />
+        <div class="product-name">AirpodCases</div>
+        <div class="product-desc">make it cool or cute for you airpodcase</div>
+      </div>
+      <div class="product-card">
+        <img src="Knittedcuddle.png" alt="Knittedcuddle" />
+        <div class="product-name">Knittedcuddle</div>
+        <div class="product-desc">cute cuddles for decoration or a keychain</div>
+      </div>
+      <div class="product-card">
+        <img src="KnittedBags.png" alt="Knittedbags" />
+        <div class="product-name">Knittedbags</div>
+        <div class="product-desc">cute bags to use</div>
+      </div>
+    <div>
+ </div>
 </main>
 
 <footer>
