--- a/products.html
+++ b/products.html
@@ -158,6 +158,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="Standcalendar.html">Stand Calendar</a></li>
       <li><a href="products.html">Products</a></li>
+      <li><a href="Ouranimestand.html"> Anime Stand</a></li>
       <li><a href="Contact.html">Contact</a></li>
     </ul>
   </nav>
@@ -165,7 +166,8 @@
 
 <main>
   <h1>Our Products by Category</h1>
-
+  <div class="category">
+   <h2>Jewelry</h2>
   <div class="products-grid">
     <div class="product-card small-img">
       <img src="Ring.png" alt="Rings" />
@@ -288,3 +290,4 @@
 
 </body>
 </html>
+
