--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Standcalendar.html">Stand Calendar</a></li>
         <li><a href="products.html">Products</a></li>
+        <li><a href="Ouranimestand.html"> Anime Stand</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -230,4 +231,5 @@
   </footer>
 </body>
 </html>
+
 
