--- a/Contact.html
+++ b/Contact.html
@@ -199,6 +199,7 @@
       <li><a href="index.html" aria-label="Home">Home</a></li>
       <li><a href="Standcalendar.html" aria-label="Stand Calendar">Stand Calendar</a></li>
       <li><a href="products.html" aria-label="Products">Products</a></li>
+      <li><a href="Ouranimestand.html"> Anime Stand</a></li>
       <li><a href="contact.html" aria-label="Contact">Contact</a></li>
     </ul>
   </nav>
@@ -268,4 +269,3 @@
 </script>
 </body>
 </html>
-
