--- a/Ouranimestand.html
+++ b/Ouranimestand.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Market Muse Product Categories</title>
+  <title>MarketMuse - Your Local Anime Stand</title>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Comic+Neue:wght@700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -71,7 +71,7 @@
     main {
       max-width: 1000px;
       margin: 80px auto 150px;
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 0.8);
       border: 2px solid #fce4ec;
       padding: 60px 70px;
       border-radius: 30px;
@@ -84,10 +84,23 @@
       font-family: 'Baloo 2', cursive;
       color: #ba68c8;
       font-size: 3.5rem;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       text-align: center;
       letter-spacing: 2px;
       text-shadow: 1px 1px 4px #f8bbd0;
+    }
+
+    .description {
+      text-align: center;
+      font-size: 1.2rem;
+      color: #4a148c;
+      max-width: 800px;
+      margin: 0 auto 50px;
+      line-height: 1.6;
+      background: rgba(255, 255, 255, 0.4);
+      padding: 20px 30px;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(179, 229, 252, 0.2);
     }
 
     .products-grid {
@@ -211,7 +224,7 @@
 </head>
 <body>
 
-<!-- Lanterns: More and faster -->
+<!-- Lanterns -->
 <div class="lantern" style="left: 5%; animation-duration: 25s; animation-delay: 0s;"></div>
 <div class="lantern" style="left: 15%; animation-duration: 27s; animation-delay: 2s;"></div>
 <div class="lantern" style="left: 25%; animation-duration: 23s; animation-delay: 4s;"></div>
@@ -243,22 +256,27 @@
 </header>
 
 <main>
-  <h1>Our Chill Anime Picks</h1>
+  <h1>MarketMuse Anime Collection</h1>
+  <div class="description">
+    Welcome to MarketMuse! We bring you the coolest anime figures, keychains, and collectibles straight to your favorite anime markets. 
+    Our goal is to keep expanding, so you can find us at even more anime conventions and local pop-ups. 
+    Come visit our stand, say hi, and grab your next favorite anime piece!
+  </div>
   <div class="products-grid">
     <div class="product-card">
-      <img src="Figure.png" alt="Anime Figure" />
+      <img src="Animefigures.png" alt="Anime Figure" />
       <div class="product-name">Anime Figure</div>
     </div>
     <div class="product-card">
-      <img src="Keychainsanime.png" alt="Keychains" />
+      <img src="Animekeychains.png" alt="Keychains" />
       <div class="product-name">Anime Keychains</div>
     </div>
     <div class="product-card">
-      <img src="Buttons.png" alt="Buttons" />
+      <img src="Animebutton.png" alt="Buttons" />
       <div class="product-name">Buttons</div>
     </div>
     <div class="product-card">
-      <img src="Mousemat.png" alt="Mousemat" />
+      <img src="Animemousemat.png" alt="Mousemat" />
       <div class="product-name">Mousemat</div>
     </div>
     <div class="product-card">
