--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Market Muse Stand</title>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Comic+Neue:wght@700&display=swap" rel="stylesheet" />
   <style>
-    /* Base styles */
     body {
       margin: 0;
       font-family: 'Baloo 2', cursive, 'Segoe UI', sans-serif;
@@ -108,6 +107,7 @@
       color: #bf360c;
       box-shadow: inset 0 0 20px #ffb74d;
       margin-bottom: 30px;
+      line-height: 1.6;
     }
 
     .contact-info {
@@ -148,7 +148,7 @@
       cursor: pointer;
       box-shadow: 0 8px 20px rgba(255, 176, 64, 0.8);
       transition: transform 0.25s ease, box-shadow 0.25s ease;
-      max-width: 300px;
+      max-width: 320px;
       width: 80%;
     }
 
@@ -201,28 +201,29 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Standcalendar.html">Stand Calendar</a></li>
         <li><a href="products.html">Products</a></li>
-        <li><a href="Ouranimestand.html"> Anime Stand</a></li>
+        <li><a href="Ouranimestand.html">Anime Stand</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Welcome to Market Muse Stand</h1>
+    <h1>Welcome to Market Muse</h1>
 
     <div class="about">
-      <p>At Market Muse, we believe shopping should be an adventure full of fun, surprises, and unique finds!</p>
-      <p>You’ll find us popping up at local markets and anime events throughout the Netherlands.</p>
+      <p>Market Muse brings you a colorful mix of hand-picked treasures, unique gifts, and playful finds — all with a warm, friendly vibe.</p>
+      <p>Catch us at local markets and anime events across the Netherlands — discover something special every time you visit!</p>
     </div>
 
     <div class="contact-info">
-      <p>Email: <a href="mailto:marketmuse2000@gmail.com">marketmuse2000@gmail.com</a></p>
-      <p>Instagram: <a href="https://instagram.com/MarketMusenl" target="_blank">@MarketMusenl</a></p>
+      <p>Email us: <a href="mailto:marketmuse2000@gmail.com">marketmuse2000@gmail.com</a></p>
+      <p>Follow us on Instagram: <a href="https://instagram.com/MarketMusenl" target="_blank">@MarketMusenl</a></p>
     </div>
 
     <div class="button-group">
-      <button onclick="location.href='Standcalendar.html'">Check Our Stand Calendar</button>
-      <button onclick="location.href='https://your-order-site.com'">View Products & Order Here</button>
+      <button onclick="location.href='Standcalendar.html'">📅 Check Our Stand Calendar</button>
+      <button onclick="location.href='products.html'">🛍️ Normal Market Products</button>
+      <button onclick="location.href='Ouranimestand.html'">🎌 Anime Market Products</button>
     </div>
   </main>
 
